ewarehouse-apex/api/src/objects/Sale__c.object
<CustomObject>
    <description>Represents a sale transaction from the warehouse</description>
    <fields>
        <fullName>Farmer__c</fullName>
        <description>The farmer who is selling their produce</description>
        <label>Farmer</label>
        <referenceTo>Farmer__c</referenceTo>
        <relationshipLabel>Sales</relationshipLabel>
        <relationshipName>Sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Harvest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The harvest from which this sale is being made</description>
        <label>Harvest</label>
        <referenceTo>Harvest__c</referenceTo>
        <relationshipLabel>Sales</relationshipLabel>
        <relationshipName>Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchaser_Name__c</fullName>
        <label>Purchaser Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date the transaction was made</description>
        <label>Sale Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volume_Sold__c</fullName>
        <label>Volume Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Sale</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Sale Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>